# gawkurl

./: Cargo.toml  README.md
gawkurl-core/: Cargo.toml
gawkurl-core/src/: lib.rs
gawkurl-core/tests/: semantics.rs
gawkurl-server/: Cargo.toml
gawkurl-server/src/: main.rs
hawkurl/: Cargo.toml
hawkurl/src/: lib.rs
hawkurl/tests/: valid.rs
nix/: sources.json
src/: lib.rs
