[package]
name = "gawkurl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = { version = "0.22.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
http = { version = "1.3.1", default-features = false }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "server", "http1", "http2"] }
reqwest = { version = "0.12.22", default-features = false }
tokio = { version = "1.46.1", features = ["time", "net", "sync", "rt"] }
