[package]
name = "gawkurl"
version = "0.1.0"
edition = "2024"

[dependencies]
gawkurl-core = { path = "gawkurl-core" }

[workspace]
resolver = "3"
members = ["gawkurl-server"]

[workspace.dependencies]
reqwest = { version = "0.12.22", default-features = false }
tokio = { version = "1.46.1", default-features = false }
