[package]
name = "gawkurl-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = { version = "0.22.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
bytes = { version = "1.10.1", default-features = false }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt"] }
