[package]
name = "gawkurl-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64 = { version = "0.22.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
bytes = { version = "1.10.1", default-features = false }
http = { workspace = true }
http-body = "1.0.1"
http-body-util = "0.1.3"
httpdate = "1.0.3"
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
futures-lite = { version = "2.6.0", default-features = false }
tokio = { workspace = true, features = ["rt", "sync", "test-util"] }
