[package]
name = "gawkurl-server"
version = "0.1.0"
edition = "2024"

[dependencies]
gawkurl-core = { path = "../gawkurl-core" }

http = { version = "1.3.1", default-features = false }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.16", default-features = false, features = ["http1", "http2", "server-auto", "tokio"] }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
