[package]
name = "gawkurl-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gawkurl-core = { path = "../gawkurl-core" }

bytes = { version = "1.10.1", default-features = false }
http = { version = "1.3.1", default-features = false }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.16", default-features = false, features = ["http1", "http2", "server-auto", "tokio"] }
reqwest = { workspace = true, features = ["http2", "rustls-tls-native-roots"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
