[package]
name = "gawkurl-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gawkurl-core = { path = "../gawkurl-core" }

http = { workspace = true }
http-body-util = "0.1.3"
hyper = { version = "1.6.0" }
hyper-util = { version = "0.1.16", default-features = false, features = ["http1", "http2", "server-auto", "tokio"] }
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "rustls-tls-native-roots"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
