[package]
name = "hawkurl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64 = { version = "0.22.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
form_urlencoded = "1.2.2"
parse_link_header = { version = "0.4.1" }
rand = "0.10.1"
tokio = { workspace = true, features = ["sync"] }
trillium = "1.3.0"
trillium-client = "0.9.5"
trillium-router = "0.5.1"

[dev-dependencies]
tokio = { workspace = true, features = ["sync"] }
trillium-testing = { version = "0.10.0", default-features = false }
